2005-08-15  Matthias Clasen  <mclasen@redhat.com>

	Backported fix from 2.8:
	
	* gtk/gtkicontheme.c: When changing the icon theme, defer
	the resetting of rc styles to an idle, so that it does
	not happen e.g during expose handling (which is problematic,
	since some widgets, like the toolbar, are changing the
	hierarchy in response to style changes).  (#300539, reported
	by many people, analyzed by Owen Taylor)

Fri Aug  5 16:54:19 2005  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenutoolbutton.c
	(gtk_menu_tool_button_construct_contents): Set the relief of the
	arrow button to the value returned by
	gtk_tool_item_get_relief_style(). Patch from Benjamin Berg.
	Bug 312695.

2005-08-01  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.6.9 ===

	* gtk/gtkuimanager.c (update_node): Update tooltips when 
	reconnecting toolitems.  (#312173, Alex Graveley)

	* gtk/gtkclipboard.c (gtk_clipboard_set_image) 
	(gtk_clipboard_set_text): Don't leak atom names.  (#311933,
	Peter Zelezny)

	* gtk/gtkmain.c (do_post_parse_initialization): Call
	gettext_initialization() here as well.  (#311612, Dan Winship)

2005-07-30  Hans Breuer  <hans@breuer.org>

	* gtk/makefile.msc.in : updated

2005-07-29  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdrawable-win32.c (blit_inside_drawable): Rename
	from blit_inside_window(), as it now does blitting inside a
	bitmap, too. No code change, still just call BitBlt().
	(_gdk_win32_blit): Check for source equalling destination
	first. (#169508, #131977) 
	Do away with the superfluous local draw_impl variable, the
	parameter to this function is already a GdkDrawableImplWin32*, no
	need to copy and cast it.

2005-07-28  Robert Ögren  <gtk@roboros.com>

	Avoid spurious core pointer events when the tablet pen is lifted.
	(#167000)

	* gdk/win32/gdkinput-win32.c (set_ignore_core): New static function,
	handles delayed unsetting of _gdk_input_ignore_core.